# drake

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 00-PROJECT-OVERVIEW.md  01-DATA-PIPELINE.md  02-MODEL-ARCHITECTURES.md  03-EVALUATION-PLAN.md  04-COMPETITIVE-LANDSCAPE.md  05-HANDOFF.md
docs/guides/: PLAN-FORMAT.md  REMOTE-TRAINING.md  STYLE-GUIDE.md
docs/plans/: README.md  end-to-end-pipeline.md
docs/plans/archive/: end-to-end-pipeline.md
run_configurations/: synthetic_smoke.json  synthetic_tcn_smoke.json
src/drake/: __init__.py  cli.py  config.py  domain.py  protocols.py  registry.py
src/drake/data/: __init__.py  collector.py  features.py  rate_limiter.py  riot_client.py  seeding.py  splits.py  synthetic.py
src/drake/evaluation/: __init__.py  calibration.py  evaluator.py  metrics.py  plots.py
src/drake/models/: __init__.py  gbdt.py  tcn.py
src/drake/training/: __init__.py  trainer.py
tests/: conftest.py  test_cli.py  test_config.py  test_domain.py  test_registry.py  test_smoke.py
tests/data/: test_collector.py  test_features.py  test_rate_limiter.py  test_riot_client.py  test_seeding.py  test_splits.py  test_synthetic.py
tests/evaluation/: test_calibration.py  test_evaluator.py  test_metrics.py
tests/models/: test_gbdt.py  test_tcn.py
